@@ -19,6 +19,9 @@ dpkg (1.16.2) UNRELEASED; urgency=low
       the host architecture, for which dpkg itself is not required.
     - Reduces the amount of work performed, including loading and parsing
       unnecessary table files or calling either of gcc or dpkg programs.
+  * Improve error message in dpkg-gencontrol and dpkg-gensymbols when
+    debian/control does not have any package stanza. Closes: #642473
+    Based on a patch by Kyle Willmon <kylewillmon@gmail.com>.
 
   [ Updated dpkg translations ]
   * Italian (Milo Casagrande). Closes: #627832
